; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_builtin_init.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_builtin_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hb_builtin_presets_json = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"PresetTemplate\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"VersionMajor\00", align 1
@hb_preset_version_major = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [13 x i8] c"VersionMinor\00", align 1
@hb_preset_version_minor = common dso_local global i8* null, align 8
@.str.3 = private unnamed_addr constant [13 x i8] c"VersionMicro\00", align 1
@hb_preset_version_micro = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [7 x i8] c"Preset\00", align 1
@hb_preset_template = common dso_local global i8* null, align 8
@.str.5 = private unnamed_addr constant [14 x i8] c"PresetBuiltin\00", align 1
@hb_presets_builtin = common dso_local global i8* null, align 8
@hb_presets = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hb_presets_builtin_init() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @hb_builtin_presets_json, align 4
  %4 = call i32* @hb_value_json(i32 %3)
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = call i32* @hb_dict_get(i32* %5, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* @hb_dict_get(i32* %7, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i8* @hb_value_get_int(i32* %8)
  store i8* %9, i8** @hb_preset_version_major, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i32* @hb_dict_get(i32* %10, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %12 = call i8* @hb_value_get_int(i32* %11)
  store i8* %12, i8** @hb_preset_version_minor, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call i32* @hb_dict_get(i32* %13, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0))
  %15 = call i8* @hb_value_get_int(i32* %14)
  store i8* %15, i8** @hb_preset_version_micro, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = call i32* @hb_dict_get(i32* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0))
  %18 = call i8* @hb_value_dup(i32* %17)
  store i8* %18, i8** @hb_preset_template, align 8
  %19 = load i32*, i32** %1, align 8
  %20 = call i32* @hb_dict_get(i32* %19, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  %21 = call i8* @hb_value_dup(i32* %20)
  store i8* %21, i8** @hb_presets_builtin, align 8
  %22 = load i8*, i8** @hb_presets_builtin, align 8
  %23 = call i32 @hb_presets_clean(i8* %22)
  %24 = call i32 (...) @hb_value_array_init()
  store i32 %24, i32* @hb_presets, align 4
  %25 = call i32 @hb_value_free(i32** %1)
  ret void
}

declare dso_local i32* @hb_value_json(i32) #1

declare dso_local i32* @hb_dict_get(i32*, i8*) #1

declare dso_local i8* @hb_value_get_int(i32*) #1

declare dso_local i8* @hb_value_dup(i32*) #1

declare dso_local i32 @hb_presets_clean(i8*) #1

declare dso_local i32 @hb_value_array_init(...) #1

declare dso_local i32 @hb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
